<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="checkbox_solved">Checkbox выбран</string>
    <string name="choose">CHOOSE SUSPECT</string>
    <string name="send">SEND CRIME REPORT</string>

    <string name="call">Call suspect</string>

    <string name="crime_disc">%1$s!The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="case_solved">The case is solved</string>
    <string name="case_notsolved">SThe case is not solved</string>
    <string name="nosuspect">there is no suspect</string>
    <string name="suspectis">the suspect is %s</string>
    <string name="send_crime">Send crime</string>
</resources>